--- a/src/main/resources/us/jost/sprechtl_jweissen_viergewinnt/vierGewinnt-view.fxml
+++ b/src/main/resources/us/jost/sprechtl_jweissen_viergewinnt/vierGewinnt-view.fxml
@@ -2,14 +2,9 @@
 
 <?import javafx.scene.text.*?>
 <?import javafx.scene.shape.*?>
-<?import java.lang.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.layout.VBox?>
-<?import javafx.scene.control.Button?>
 
 <VBox alignment="CENTER" prefHeight="520.0" prefWidth="496.0" spacing="20.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.jost.sprechtl_jweissen_viergewinnt.controller.ControllerGUI">
     <padding>
@@ -270,17 +265,17 @@
             </Label>
             <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                <children>
-                  <Button fx:id="ButtonUndo" mnemonicParsing="false" onAction="#onButtonUndoClicked" prefHeight="25.0" prefWidth="90.0" text="Undo">
+                  <Button mnemonicParsing="false" onAction="#onButtonUndoClicked" prefHeight="25.0" prefWidth="90.0" text="Undo">
                      <VBox.margin>
                         <Insets bottom="3.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="ButtonReset" mnemonicParsing="false" onAction="#onButtonResetClicked" prefHeight="25.0" prefWidth="90.0" text="Reset">
+                  <Button mnemonicParsing="false" onAction="#onButtonResetClicked" prefHeight="25.0" prefWidth="90.0" text="Reset">
                      <VBox.margin>
                         <Insets bottom="3.0" top="3.0" />
                      </VBox.margin>
                   </Button>
-                  <Button fx:id="ButtonQuit" mnemonicParsing="false" onAction="#onButtonQuitClicked" prefWidth="90.0" text="Quit">
+                  <Button mnemonicParsing="false" onAction="#onButtonQuitClicked" prefWidth="90.0" text="Quit">
                      <VBox.margin>
                         <Insets top="3.0" />
                      </VBox.margin>
