--- a/src/main/resources/us/jost/sprechtl_jweissen_viergewinnt/namePicker-view.fxml
+++ b/src/main/resources/us/jost/sprechtl_jweissen_viergewinnt/namePicker-view.fxml
@@ -5,7 +5,6 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-
 <VBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="us.jost.sprechtl_jweissen_viergewinnt.controller.ControllerNamePickerGUI">
    <children>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
@@ -15,7 +14,7 @@
                   <Insets right="20.0" />
                </padding>
             </Label>
-            <TextField />
+            <TextField fx:id="LabelPlayerName" />
          </children>
          <VBox.margin>
             <Insets />
@@ -23,7 +22,7 @@
       </HBox>
       <HBox alignment="CENTER" prefHeight="100.0" prefWidth="200.0">
          <children>
-            <Button mnemonicParsing="false" text="Bast" />
+            <Button mnemonicParsing="false" onAction="#onConfirmButtonPressed" text="Bast" />
          </children>
       </HBox>
    </children>
