Mit "Enter" auf der Tastatur kann nun der Name bestätigt werden

--- a/src/main/resources/us/jost/sprechtl_jweissen_viergewinnt/namePicker-view.fxml
+++ b/src/main/resources/us/jost/sprechtl_jweissen_viergewinnt/namePicker-view.fxml
@@ -16,7 +16,7 @@
                   <Insets right="20.0" />
                </padding>
             </Label>
-            <TextField fx:id="LabelPlayerName" />
+            <TextField fx:id="LabelPlayerName" onKeyReleased="#onKeyReleased" />
          </children>
          <VBox.margin>
             <Insets />
